--- a/Poc_Projeto/src/main/resources/templates/contato/CadastroContato.html
+++ b/Poc_Projeto/src/main/resources/templates/contato/CadastroContato.html
@@ -5,7 +5,7 @@
 	layout:decorator="layout/LayoutPadrao">
 	
 <head>
-	<title>Agenda</title>
+	<title>Cadastro contato</title>
 </head>
 
 <body>
@@ -14,50 +14,56 @@
 	<div class="page-header">
 		<div class="container-fluid">
 			<h1>
-				Cadastro de produto
+				Cadastro de contato
 			</h1>
 		</div>
 	</div>
 
 	<div class="container-fluid">
-	
-		<div class="alert  alert-danger  alert-dismissible" role="alert">
-			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			<i class="fa  fa-exclamation-circle"></i> Já existe um produto com o nome informado.
+		<div class="alert  alert-success  alert-dismissible" role="alert" th:if="${not #strings.isEmpty(mensagem)}">
+			<button type="button" class="close" data-dismiss="alert" ><span aria-hidden="true">&times;</span></button>
+			<span th:text="${mensagem}"></span>
 		</div>
-	
-		<form method="get" class="form-vertical  js-form-loading">
+
+		<form method="POST" th:object="${contato}" class="form-vertical  js-form-loading" th:action="@{/contatos/novo}">
+			<div class="alert  alert-danger  alert-dismissible" role="alert" th:if="${#fields.hasAnyErrors()}">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<th:block th:each="erro: ${#fields.detailedErrors()}">
+					<div>
+						<i class="fa  fa-exclamation-circle"></i> 
+						<span th:text="${erro.message}"> Já existe um contato com o nome informado.</span>
+					</div>
+				</th:block>	
+			</div>
 			
-			<div class="form-group">
-				<label for="input-produto-nome">Nome</label>
-				<input id="input-produto-nome" type="text" class="form-control"/>
+			<div class="form-group" th:classappend= "${#fields.hasErrors('nome')} ? has-error">
+				<label for="nome" class= "control-label">Nome</label>
+				<input id="nome" type="text" class="form-control" th:field="*{nome}"/>
 			</div>
-	
-			<div class="form-group">
-				<label for="input-produto-descricao">Descrição</label>
-				<textarea id="input-produto-descricao" rows="3" class="form-control"></textarea>
-			</div>
-	
+			
 			<div class="row">
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label for="input-produto-preco">Preço unitário</label>
-						<input id="input-produto-preco" type="text" class="form-control" placeholder="R$"/>
-					</div>
+				<div class="col-sm-6 form-group" th:classappend= "${#fields.hasErrors('apelido')} ? has-error">
+					<label for="apelido" class="control-label">Apelido</label>
+					<input id="apelido" type="text" class="form-control" th:field="*{apelido}"/>
 				</div>
-				
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label for="input-produto-estoque">Estoque</label>
-						<input id="input-produto-estoque" type="text" class="form-control" placeholder="Unidades"/>
-					</div>
+				<div class="col-sm-6 form-group" th:classappend= "${#fields.hasErrors('whats')} ? has-error">
+					<label for="whats" class="control-label">Whatsapp</label>
+					<input id="whats" type="text" class="form-control" th:field="*{whats}"/>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6 form-group" th:classappend= "${#fields.hasErrors('tel')} ? has-error">
+					<label for="tel" class="control-label">Telefone</label>
+					<input id="tel" type="text" class="form-control" th:field="*{tel}"/>
+				</div>
+				<div class="col-sm-6 form-group" th:classappend= "${#fields.hasErrors('dtNasc')} ? has-error">
+					<label for="dtNasc" class="control-label">Data de nascimento</label>
+					<input id="dtNasc" type="date" class="form-control" th:field="*{dtNasc}"/>
 				</div>
 			</div>
 			
 			<div class="form-group">
 				<button class="btn  btn-primary" type="submit">Salvar</button>
-				<a href="#" class="btn  btn-default">Cancelar</a>
-				<a href="#" class="btn  btn-link  aw-btn-link-danger">Excluir este produto</a>
 			</div>
 	
 		</form>
