fix: correção de elementos html

--- a/Poc_Projeto/src/main/resources/templates/contato/CadastroContato.html
+++ b/Poc_Projeto/src/main/resources/templates/contato/CadastroContato.html
@@ -30,26 +30,26 @@
 			
 			<div class="form-group">
 				<label for="input-produto-nome">Nome</label>
-				<input id="input-produto-nome" name="nome" type="text" class="form-control"/></textarea>
+				<input id="input-produto-nome" name="nome" type="text" class="form-control"/>
 			</div>
 	
 			<div class="form-group">
 				<label for="input-produto-descricao">Apelido</label>
-				<textarea id="input-produto-descricao" name="apelido" rows="3" class="form-control"></textarea>
+				<input id="input-produto-descricao" name="apelido" type="text" class="form-control"/>
 			</div>
 	
 			<div class="row">
 				<div class="col-sm-3">
 					<div class="form-group">
 						<label for="input-produto-preco">WhatsApp</label>
-						<input id="input-produto-preco" name="whats" type="text" class="form-control"/></textarea>
+						<input id="input-produto-preco" name="whats" type="text" class="form-control"/>
 					</div>
 				</div>
 				
 				<div class="col-sm-3">
 					<div class="form-group">
 						<label for="input-produto-estoque">Telefone</label>
-						<input id="input-produto-estoque" name="tel" type="text" class="form-control"/></textarea>
+						<input id="input-produto-estoque" name="tel" type="text" class="form-control"/>
 					</div>
 				</div>
 
